# sigmod26gem

./: README.md
gem_data/evqa/cdata/: coarse_centroids.npy  coarse_cluster_info.txt
gem_data/evqa/docdata/: doclens0.npy  doclens1.npy  doclens2.npy
gem_data/evqa/qdata/: filterd_query_len.npy  qrels.tsv
glass/: bindings.cpp  build.sh  main  main.cpp  main_vs.cpp  solution.h  solution2.cpp  solution2.h
glass/glass/: builder.h  common.h  graph.h  memory.h  neighbor.h  searcher.h
glass/glass/hnsw/: HNSWInitializer.h  hnsw.h
glass/glass/hnswlib/: hnswalg.h  hnswlib.h  space_l2.h
glass/glass/nsg/: nndescent.h  nsg.h
glass/glass/quant/: fp32_quant.h  fp32_vc_quant.h  quant.h  random_projector.h  sq4_quant.h  sq4_random_projector.h  sq8_quant.h  sq8_random_projector.h  sq8_random_projector_with_fp16.h  sq8_unified_quant.h
glass/glass/simd/: distance.h
hnswlib/: CMakeLists.txt
hnswlib/cnpy/: example1.cpp
hnswlib/examples/caches/: 95k_ground_truth_bi_summax_l2_top100.txt  95k_ground_truth_new_summax_l2_top100.txt  95k_ground_truth_single_summax_l2_top100.txt  ground_truth_bi_summax_l2_top100.txt  ground_truth_new_summax_l2_top100.txt
hnswlib/examples/cpp/: example_vecset_search.cpp  example_vecset_search_gem.cpp
hnswlib/hnswlib/: hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  vectorset.h
hnswlib/otlib/: EMD.h  EMD_wrapper.cpp  full_bipartitegraph.h
